main/default/objects/SupplierKPIMeasure__c/SupplierKPIMeasure__c.object-meta.xml
<CustomObject>
    <description>Supplier Measures</description>
    <label>Supplier Measure</label>
    <nameField>
        <displayFormat>SMRS-{00000000}</displayFormat>
        <label>SMeasureNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>