main/default/objects/SupplierKPIMeasure__c/fields/Measure_Date__c.field-meta.xml
<CustomField>
    <fullName>Measure_Date__c</fullName>
    <description>Measure Date</description>
    <inlineHelpText>Measure Date</inlineHelpText>
    <label>Measure Date</label>
    <type>Date</type>
</CustomField>