main/default/objects/SupplierKPIMeasure__c/fields/Measure_Enumeration__c.field-meta.xml
<CustomField>
    <fullName>Measure_Enumeration__c</fullName>
    <description>Measure Enumeration</description>
    <inlineHelpText>Measure Enumeration</inlineHelpText>
    <label>Measure Enumeration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>