main/default/objects/SupplierKPIMeasure__c/fields/Measure_Percent__c.field-meta.xml
<CustomField>
    <fullName>Measure_Percent__c</fullName>
    <description>Measure Percent</description>
    <inlineHelpText>Measure Percent</inlineHelpText>
    <label>Measure Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>