main/default/objects/SupplierKPIMeasure__c/fields/MeasureNum__c.field-meta.xml
<CustomField>
    <fullName>MeasureNum__c</fullName>
    <description>Measure Numeric</description>
    <inlineHelpText>Measure Numeric</inlineHelpText>
    <label>MeasureNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>