main/default/objects/SupplierKPIMeasure__c/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <formula>TEXT( SIPM_KPI__r.Qualifier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualifier</label>
    <type>Text</type>
</CustomField>