main/default/objects/SupplierKPIMeasure__c/fields/SIPM_KPI__c.field-meta.xml
<CustomField>
    <fullName>SIPM_KPI__c</fullName>
    <description>SIPM KPI</description>
    <inlineHelpText>SIPM KPI</inlineHelpText>
    <label>SIPM KPI</label>
    <referenceTo>SPIM_KPI__c</referenceTo>
    <relationshipLabel>Supplier Measures</relationshipLabel>
    <relationshipName>Supplier_Measures</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>