main/default/objects/SupplierKPIMeasure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>SIPM_KPI__c</columns>
    <columns>Qualifier__c</columns>
    <columns>KPI_Target__c</columns>
    <columns>Measure_Date__c</columns>
    <columns>MeasureNum__c</columns>
    <columns>Measure_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>